2003-07-31  Oliver Kiddle  <opk@zsh.org>

	* 18914: Completion/Base/Utility/_nothing,
	Completion/Cygwin/Command/_cygpath,
	Completion/Cygwin/Command/_cygrunsrv,
	Completion/Cygwin/Command/_getclip,
	Completion/Cygwin/Command/_getfacl,
	Completion/Cygwin/Command/_mkshortcut,
	Completion/Cygwin/Command/_pscp, Completion/Cygwin/Command/_putclip,
	Completion/Debian/Command/_auto-apt, Completion/Debian/Command/_bug,
	Completion/Debian/Command/_debchange,
	Completion/Debian/Command/_debfoster,
	Completion/Debian/Command/_debsign, Completion/Debian/Command/_dpkg,
	Completion/Debian/Command/_dpkg_source,
	Completion/Debian/Command/_dput, Completion/Debian/Command/_dupload,
	Completion/Debian/Command/_update-alternatives,
	Completion/Linux/Command/_iptables,
	Completion/Linux/Command/_pkgtool, Completion/Redhat/Command/_rpm,
	Completion/Unix/Command/_apm, Completion/Unix/Command/_arping,
	Completion/Unix/Command/_cvs, Completion/Unix/Command/_fakeroot,
	Completion/Unix/Command/_fsh, Completion/Unix/Command/_global,
	Completion/Unix/Type/_global_tags, Completion/Unix/Command/_vorbis,
	Completion/Unix/Command/_imagemagick, Completion/Unix/Command/_irssi,
	Completion/Unix/Command/_mysql_utils, Completion/Unix/Command/_pbm,
	Completion/Unix/Command/_rar, Completion/Unix/Command/_rsync,
	Completion/Unix/Command/_slrn, Completion/Unix/Command/_user_admin,
	Completion/X/Command/_acroread, Completion/X/Type/_x_color:
	tidy up a number of completion functions (includes fixes, updates,
	improvements and simple aesthetic changes)

2003-07-29  Wayne Davison  <wayned@users.sourceforge.net>

	* users/6421: Src/Zle/zle_misc.c: Don't crash if alt-y is
	typed twice in a row without a prior ctrl-y.

2003-07-25  Peter Stephenson  <pws@csr.com>

	* 18908: Doc/Zsh/builtins.yo, Functions/TCP/tcp_fd_handler,
	Functions/TCP/tcp_read, Functions/TCP/tcp_send,
	Functions/TCP/tcp_sess: Use print/read -u for supplying fd's.
	Tweak documentation for print/read -u for consistency.
